<resources>
    <string name="app_name">JetPack Components</string>
    <string name="change_color">Change Color</string>
    <string name="add_data">Add Data</string>
    <string name="cancel">Cancel</string>
    <string name="livedata_demo">LiveData Demo</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_contact">Enter Contact</string>
</resources>